[package]
name = "nobilitydao"
version = "0.1.0"
description = "Nobility DAO Program"
authors = ["Nobility DAO Maintainers <michaeljedgar@gmail.com>"]
repository = "https://github.com/mje-testing/nobility-dao"
license = "AGPL"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.0"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.8.1"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.8.1"
solana-sdk = "1.8.1"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
